# Dataset_creation

./: README.md  project_description_cn.txt  pyproject.toml  requirements.txt  run_dataset_generation.py
pcdset/: __init__.py  cli.py  main.py  tasks.py
pcdset/cli/: __init__.py  app.py  common.py
pcdset/cli/commands/: __init__.py  auto.py  convert.py  example.py  list_profiles.py  validate.py
pcdset/datasets/: __init__.py  _common.py  auto_shapenet.py  pcn.py  shapenet.py
pcdset/io/: __init__.py  reader.py  writer_lmdb.py  writer_ply.py
pcdset/manifest/: __init__.py  builders.py  examples.py  io.py  loaders.py  models.py
pcdset/ops/: __init__.py  normalize.py  resample.py
pcdset/profiles/: __init__.py  base.py  pcn.py  registry.py  shapenet.py
pcdset/utils/: __init__.py  logging.py  manifest.py  preprocessing.py  taxonomy.py
